; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_license_info_is_expired.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/extr_license.c_license_info_is_expired.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @license_info_is_expired(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = call i32 (...) @GetCurrentTransactionStartTimestamp()
  store i32 %4, i32* %3, align 4
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @timestamp_cmp_internal(i32 %7, i32 %8)
  %10 = icmp slt i64 %9, 0
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local i32 @GetCurrentTransactionStartTimestamp(...) #1

declare dso_local i64 @timestamp_cmp_internal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
